--- a/paper_data_v3/irat_enet/data_collection.ipynb
+++ b/paper_data_v3/irat_enet/data_collection.ipynb
@@ -34,8 +34,8 @@
     "from collections import Counter\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "# from emergenet.utils import parse_fasta, filter_by_date_range, save_model\n",
-    "# from emergenet.emergenet import Enet\n",
+    "from emergenet.utils import parse_fasta, filter_by_date_range, save_model\n",
+    "from emergenet.emergenet import Enet\n",
     "\n",
     "# Directory paths\n",
     "HUMAN_DIR = 'data/human/'\n",
@@ -1043,8 +1043,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "6e8cc807",
+   "execution_count": 10,
+   "id": "5f149572",
    "metadata": {},
    "outputs": [
     {
@@ -1100,6 +1100,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>A/Hunan/42443/2015</td>\n",
+       "      <td>H1N1</td>\n",
+       "      <td>2015-07-02</td>\n",
+       "      <td>EPI691395</td>\n",
+       "      <td>MEARLFVLFCAFTTLKADTICVGYHANNSTDTVDTILEKNVTVTHS...</td>\n",
+       "      <td>EPI691397</td>\n",
+       "      <td>MNPNQKIITIGSICMAIGIASLILQIGNIISIWISHSIQTENQNQS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>A/Iowa/39/2015</td>\n",
        "      <td>H1N1</td>\n",
        "      <td>2015-08-07</td>\n",
@@ -1109,7 +1119,7 @@
        "      <td>MNTNQRIITIGTVCMIVGMISLLLQIGSIVSLWISHSIQTGWENHT...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>A/Parana/720/2015</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2015-11-27</td>\n",
@@ -1119,7 +1129,7 @@
        "      <td>MNPNQKIITIGSISLTIALMCFLMQVVILVTTVTLHFKQYECNPAP...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>A/Minnesota/45/2016</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2016-03-29</td>\n",
@@ -1129,7 +1139,7 @@
        "      <td>MNPNQKIITIGSASLIIATICFLMQVAILVTTVTLHFKQHDCNSSP...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>A/Wisconsin/71/2016</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2016-06-09</td>\n",
@@ -1139,7 +1149,7 @@
        "      <td>MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHNCDSSP...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>A/Ohio/24/2017</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2017-07-25</td>\n",
@@ -1149,7 +1159,17 @@
        "      <td>MNPNQKIITIGSASLIIATICFLMQVAILVTTVTLHFKQHDCNPSP...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <td>A/Michigan/383/2018</td>\n",
+       "      <td>H1N2</td>\n",
+       "      <td>2018-07-31</td>\n",
+       "      <td>EPI1271066</td>\n",
+       "      <td>MKVKLMVLLCTFTATYADTICVGYHANNSTDTVDTVLEKNVTVTHS...</td>\n",
+       "      <td>EPI1271065</td>\n",
+       "      <td>MNPNQKIITIGSISLTLAAMCFLMQTAILVTNVTLHFNQCECHYPP...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>A/Alberta/01/2020_(H1N2)v</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2020-10-01</td>\n",
@@ -1159,7 +1179,7 @@
        "      <td>MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHDCNSSS...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>10</th>\n",
        "      <td>A/Taiwan/1/2021</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2021-03-14</td>\n",
@@ -1173,41 +1193,47 @@
        "</div>"
       ],
       "text/plain": [
-       "                        name subtype        date ha_accession  \\\n",
-       "0        A/Minnesota/19/2011    H1N2  2011-11-04    EPI347610   \n",
-       "1             A/Ohio/09/2015    H1N1  2015-04-21    EPI590132   \n",
-       "2             A/Iowa/39/2015    H1N1  2015-08-07    EPI638970   \n",
-       "3          A/Parana/720/2015    H1N2  2015-11-27    EPI768456   \n",
-       "4        A/Minnesota/45/2016    H1N2  2016-03-29    EPI760602   \n",
-       "5        A/Wisconsin/71/2016    H1N2  2016-06-09    EPI816890   \n",
-       "6             A/Ohio/24/2017    H1N2  2017-07-25   EPI1056725   \n",
-       "7  A/Alberta/01/2020_(H1N2)v    H1N2  2020-10-01   EPI1815179   \n",
-       "8            A/Taiwan/1/2021    H1N2  2021-03-14   EPI1918926   \n",
+       "                         name subtype        date ha_accession  \\\n",
+       "0         A/Minnesota/19/2011    H1N2  2011-11-04    EPI347610   \n",
+       "1              A/Ohio/09/2015    H1N1  2015-04-21    EPI590132   \n",
+       "2          A/Hunan/42443/2015    H1N1  2015-07-02    EPI691395   \n",
+       "3              A/Iowa/39/2015    H1N1  2015-08-07    EPI638970   \n",
+       "4           A/Parana/720/2015    H1N2  2015-11-27    EPI768456   \n",
+       "5         A/Minnesota/45/2016    H1N2  2016-03-29    EPI760602   \n",
+       "6         A/Wisconsin/71/2016    H1N2  2016-06-09    EPI816890   \n",
+       "7              A/Ohio/24/2017    H1N2  2017-07-25   EPI1056725   \n",
+       "8         A/Michigan/383/2018    H1N2  2018-07-31   EPI1271066   \n",
+       "9   A/Alberta/01/2020_(H1N2)v    H1N2  2020-10-01   EPI1815179   \n",
+       "10            A/Taiwan/1/2021    H1N2  2021-03-14   EPI1918926   \n",
        "\n",
-       "                                         ha_sequence na_accession  \\\n",
-       "0  MKVKLLTLFCTFTATYADTICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI347609   \n",
-       "1  MKAILIVLLYTFTTANADKICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI590131   \n",
-       "2  MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...    EPI638969   \n",
-       "3  MKIKLLILLCTFTATYADTICTGYHANNSTDTVDTVLEKNVTVTHS...    EPI768455   \n",
-       "4  MKAILLVLLHTFAAANADTICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI760601   \n",
-       "5  MKVKLLILLCTFTAAYADTICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI816889   \n",
-       "6  MKAILLVLLHTFAAANADTICIGYHANNSTDTVDTVLEKNVTVTHS...   EPI1056724   \n",
-       "7  MKAILLVLLHTFAATSADTICVGYHANNSTDTVDTVLEKNVTVTHS...   EPI1815178   \n",
-       "8  MKATLLILLGTFTTANADTLCVGYHANNSTDTVDTVLEKNVTVTHS...   EPI1918928   \n",
+       "                                          ha_sequence na_accession  \\\n",
+       "0   MKVKLLTLFCTFTATYADTICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI347609   \n",
+       "1   MKAILIVLLYTFTTANADKICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI590131   \n",
+       "2   MEARLFVLFCAFTTLKADTICVGYHANNSTDTVDTILEKNVTVTHS...    EPI691397   \n",
+       "3   MKAILVVLLYTFTTANADTLCIGYHANNSTDTVDTVLEKNVTVTHS...    EPI638969   \n",
+       "4   MKIKLLILLCTFTATYADTICTGYHANNSTDTVDTVLEKNVTVTHS...    EPI768455   \n",
+       "5   MKAILLVLLHTFAAANADTICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI760601   \n",
+       "6   MKVKLLILLCTFTAAYADTICIGYHANNSTDTVDTVLEKNVTVTHS...    EPI816889   \n",
+       "7   MKAILLVLLHTFAAANADTICIGYHANNSTDTVDTVLEKNVTVTHS...   EPI1056724   \n",
+       "8   MKVKLMVLLCTFTATYADTICVGYHANNSTDTVDTVLEKNVTVTHS...   EPI1271065   \n",
+       "9   MKAILLVLLHTFAATSADTICVGYHANNSTDTVDTVLEKNVTVTHS...   EPI1815178   \n",
+       "10  MKATLLILLGTFTTANADTLCVGYHANNSTDTVDTVLEKNVTVTHS...   EPI1918928   \n",
        "\n",
-       "                                         na_sequence  \n",
-       "0  MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHDYNSPP...  \n",
-       "1  MNANQRIITIGTVCLIIGIISLLLQIGNMVSLWISHSIQTGGKNHT...  \n",
-       "2  MNTNQRIITIGTVCMIVGMISLLLQIGSIVSLWISHSIQTGWENHT...  \n",
-       "3  MNPNQKIITIGSISLTIALMCFLMQVVILVTTVTLHFKQYECNPAP...  \n",
-       "4  MNPNQKIITIGSASLIIATICFLMQVAILVTTVTLHFKQHDCNSSP...  \n",
-       "5  MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHNCDSSP...  \n",
-       "6  MNPNQKIITIGSASLIIATICFLMQVAILVTTVTLHFKQHDCNPSP...  \n",
-       "7  MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHDCNSSS...  \n",
-       "8  MNPIKKIITIGSVSLTITSICFLMQIVILLTTVKLHFKQHECNSPP...  "
+       "                                          na_sequence  \n",
+       "0   MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHDYNSPP...  \n",
+       "1   MNANQRIITIGTVCLIIGIISLLLQIGNMVSLWISHSIQTGGKNHT...  \n",
+       "2   MNPNQKIITIGSICMAIGIASLILQIGNIISIWISHSIQTENQNQS...  \n",
+       "3   MNTNQRIITIGTVCMIVGMISLLLQIGSIVSLWISHSIQTGWENHT...  \n",
+       "4   MNPNQKIITIGSISLTIALMCFLMQVVILVTTVTLHFKQYECNPAP...  \n",
+       "5   MNPNQKIITIGSASLIIATICFLMQVAILVTTVTLHFKQHDCNSSP...  \n",
+       "6   MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHNCDSSP...  \n",
+       "7   MNPNQKIITIGSASLIIATICFLMQVAILVTTVTLHFKQHDCNPSP...  \n",
+       "8   MNPNQKIITIGSISLTLAAMCFLMQTAILVTNVTLHFNQCECHYPP...  \n",
+       "9   MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHDCNSSS...  \n",
+       "10  MNPIKKIITIGSVSLTITSICFLMQIVILLTTVKLHFKQHECNSPP...  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
