--- a/paper_data_v3/irat_enet/variant_predictions.ipynb
+++ b/paper_data_v3/irat_enet/variant_predictions.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b1b87e7e",
    "metadata": {},
    "outputs": [],
@@ -56,28 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4e89ef59-6675-45f3-8534-035dbd0dbad4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ishanu/Dropbox/ZED/Research/emergenet/paper_data_v3/irat_enet\n",
-      "animal\thuman  irat  variant\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pwd\n",
-    "! ls data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c524394b",
+   "execution_count": 9,
+   "id": "0c300103",
    "metadata": {},
    "outputs": [
     {
@@ -108,17 +88,14 @@
        "      <th>emergence_1</th>\n",
        "      <th>emergence_3</th>\n",
        "      <th>emergence_6</th>\n",
-       "      <th>emergence_12</th>\n",
        "      <th>emergence_high_0</th>\n",
        "      <th>emergence_high_1</th>\n",
        "      <th>emergence_high_3</th>\n",
        "      <th>emergence_high_6</th>\n",
-       "      <th>emergence_high_12</th>\n",
        "      <th>geom_mean_risk_0</th>\n",
        "      <th>geom_mean_risk_1</th>\n",
        "      <th>geom_mean_risk_3</th>\n",
        "      <th>geom_mean_risk_6</th>\n",
-       "      <th>geom_mean_risk_12</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -131,17 +108,14 @@
        "      <td>6.914</td>\n",
        "      <td>6.992</td>\n",
        "      <td>6.928</td>\n",
-       "      <td>6.025</td>\n",
        "      <td>8.292</td>\n",
        "      <td>8.281</td>\n",
        "      <td>8.367</td>\n",
        "      <td>8.296</td>\n",
-       "      <td>7.307</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
-       "      <td>0.003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -152,20 +126,35 @@
        "      <td>5.939</td>\n",
        "      <td>5.948</td>\n",
        "      <td>5.954</td>\n",
-       "      <td>6.055</td>\n",
        "      <td>7.470</td>\n",
        "      <td>7.213</td>\n",
        "      <td>7.223</td>\n",
        "      <td>7.229</td>\n",
-       "      <td>7.340</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>0.003</td>\n",
        "      <td>0.003</td>\n",
        "      <td>0.003</td>\n",
        "      <td>0.003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>A/Hunan/42443/2015</td>\n",
+       "      <td>H1N1</td>\n",
+       "      <td>2015-07-02</td>\n",
+       "      <td>7.675</td>\n",
+       "      <td>7.675</td>\n",
+       "      <td>7.733</td>\n",
+       "      <td>7.595</td>\n",
+       "      <td>9.116</td>\n",
+       "      <td>9.116</td>\n",
+       "      <td>9.179</td>\n",
+       "      <td>9.028</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>A/Iowa/39/2015</td>\n",
        "      <td>H1N1</td>\n",
        "      <td>2015-08-07</td>\n",
@@ -173,20 +162,17 @@
        "      <td>6.761</td>\n",
        "      <td>7.004</td>\n",
        "      <td>6.225</td>\n",
-       "      <td>6.834</td>\n",
        "      <td>7.973</td>\n",
        "      <td>8.113</td>\n",
        "      <td>8.380</td>\n",
        "      <td>7.526</td>\n",
-       "      <td>8.193</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>0.001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>A/Parana/720/2015</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2015-11-27</td>\n",
@@ -194,20 +180,17 @@
        "      <td>4.098</td>\n",
        "      <td>4.304</td>\n",
        "      <td>5.411</td>\n",
-       "      <td>5.032</td>\n",
        "      <td>5.141</td>\n",
        "      <td>5.194</td>\n",
        "      <td>5.420</td>\n",
        "      <td>6.634</td>\n",
-       "      <td>6.218</td>\n",
        "      <td>0.028</td>\n",
        "      <td>0.026</td>\n",
        "      <td>0.021</td>\n",
        "      <td>0.006</td>\n",
-       "      <td>0.009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>A/Minnesota/45/2016</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2016-03-29</td>\n",
@@ -215,20 +198,17 @@
        "      <td>5.251</td>\n",
        "      <td>5.708</td>\n",
        "      <td>4.947</td>\n",
-       "      <td>5.077</td>\n",
        "      <td>6.332</td>\n",
        "      <td>6.459</td>\n",
        "      <td>6.959</td>\n",
        "      <td>6.125</td>\n",
-       "      <td>6.267</td>\n",
        "      <td>0.008</td>\n",
        "      <td>0.007</td>\n",
        "      <td>0.004</td>\n",
        "      <td>0.010</td>\n",
-       "      <td>0.009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>6</th>\n",
        "      <td>A/Wisconsin/71/2016</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2016-06-09</td>\n",
@@ -236,20 +216,17 @@
        "      <td>6.140</td>\n",
        "      <td>6.189</td>\n",
        "      <td>6.334</td>\n",
-       "      <td>5.681</td>\n",
        "      <td>8.283</td>\n",
        "      <td>7.432</td>\n",
        "      <td>7.487</td>\n",
        "      <td>7.646</td>\n",
-       "      <td>6.929</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.002</td>\n",
        "      <td>0.002</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>0.004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>7</th>\n",
        "      <td>A/Ohio/24/2017</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2017-07-25</td>\n",
@@ -257,20 +234,35 @@
        "      <td>7.668</td>\n",
        "      <td>7.434</td>\n",
        "      <td>7.570</td>\n",
-       "      <td>7.478</td>\n",
        "      <td>9.141</td>\n",
        "      <td>9.108</td>\n",
        "      <td>8.852</td>\n",
        "      <td>9.001</td>\n",
-       "      <td>8.900</td>\n",
-       "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <td>A/Michigan/383/2018</td>\n",
+       "      <td>H1N2</td>\n",
+       "      <td>2018-07-31</td>\n",
+       "      <td>7.733</td>\n",
+       "      <td>5.742</td>\n",
+       "      <td>6.034</td>\n",
+       "      <td>5.150</td>\n",
+       "      <td>9.179</td>\n",
+       "      <td>6.997</td>\n",
+       "      <td>7.317</td>\n",
+       "      <td>6.347</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>0.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>A/Alberta/01/2020_(H1N2)v</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2020-10-01</td>\n",
@@ -278,20 +270,17 @@
        "      <td>5.664</td>\n",
        "      <td>5.517</td>\n",
        "      <td>5.617</td>\n",
-       "      <td>5.804</td>\n",
        "      <td>6.900</td>\n",
        "      <td>6.911</td>\n",
        "      <td>6.750</td>\n",
        "      <td>6.859</td>\n",
-       "      <td>7.065</td>\n",
        "      <td>0.004</td>\n",
        "      <td>0.004</td>\n",
        "      <td>0.005</td>\n",
        "      <td>0.005</td>\n",
-       "      <td>0.004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>10</th>\n",
        "      <td>A/Taiwan/1/2021</td>\n",
        "      <td>H1N2</td>\n",
        "      <td>2021-03-14</td>\n",
@@ -299,78 +288,83 @@
        "      <td>5.464</td>\n",
        "      <td>5.501</td>\n",
        "      <td>5.337</td>\n",
-       "      <td>5.126</td>\n",
        "      <td>6.737</td>\n",
        "      <td>6.692</td>\n",
        "      <td>6.732</td>\n",
        "      <td>6.553</td>\n",
-       "      <td>6.321</td>\n",
        "      <td>0.005</td>\n",
        "      <td>0.006</td>\n",
        "      <td>0.005</td>\n",
        "      <td>0.006</td>\n",
-       "      <td>0.008</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        name subtype        date  emergence_0  emergence_1  \\\n",
-       "0        A/Minnesota/19/2011    H1N2  2011-11-04        6.924        6.914   \n",
-       "1             A/Ohio/09/2015    H1N1  2015-04-21        6.174        5.939   \n",
-       "2             A/Iowa/39/2015    H1N1  2015-08-07        6.632        6.761   \n",
-       "3          A/Parana/720/2015    H1N2  2015-11-27        4.049        4.098   \n",
-       "4        A/Minnesota/45/2016    H1N2  2016-03-29        5.136        5.251   \n",
-       "5        A/Wisconsin/71/2016    H1N2  2016-06-09        6.916        6.140   \n",
-       "6             A/Ohio/24/2017    H1N2  2017-07-25        7.698        7.668   \n",
-       "7  A/Alberta/01/2020_(H1N2)v    H1N2  2020-10-01        5.654        5.664   \n",
-       "8            A/Taiwan/1/2021    H1N2  2021-03-14        5.506        5.464   \n",
+       "                         name subtype        date  emergence_0  emergence_1  \\\n",
+       "0         A/Minnesota/19/2011    H1N2  2011-11-04        6.924        6.914   \n",
+       "1              A/Ohio/09/2015    H1N1  2015-04-21        6.174        5.939   \n",
+       "2          A/Hunan/42443/2015    H1N1  2015-07-02        7.675        7.675   \n",
+       "3              A/Iowa/39/2015    H1N1  2015-08-07        6.632        6.761   \n",
+       "4           A/Parana/720/2015    H1N2  2015-11-27        4.049        4.098   \n",
+       "5         A/Minnesota/45/2016    H1N2  2016-03-29        5.136        5.251   \n",
+       "6         A/Wisconsin/71/2016    H1N2  2016-06-09        6.916        6.140   \n",
+       "7              A/Ohio/24/2017    H1N2  2017-07-25        7.698        7.668   \n",
+       "8         A/Michigan/383/2018    H1N2  2018-07-31        7.733        5.742   \n",
+       "9   A/Alberta/01/2020_(H1N2)v    H1N2  2020-10-01        5.654        5.664   \n",
+       "10            A/Taiwan/1/2021    H1N2  2021-03-14        5.506        5.464   \n",
        "\n",
-       "   emergence_3  emergence_6  emergence_12  emergence_high_0  emergence_high_1  \\\n",
-       "0        6.992        6.928         6.025             8.292             8.281   \n",
-       "1        5.948        5.954         6.055             7.470             7.213   \n",
-       "2        7.004        6.225         6.834             7.973             8.113   \n",
-       "3        4.304        5.411         5.032             5.141             5.194   \n",
-       "4        5.708        4.947         5.077             6.332             6.459   \n",
-       "5        6.189        6.334         5.681             8.283             7.432   \n",
-       "6        7.434        7.570         7.478             9.141             9.108   \n",
-       "7        5.517        5.617         5.804             6.900             6.911   \n",
-       "8        5.501        5.337         5.126             6.737             6.692   \n",
+       "    emergence_3  emergence_6  emergence_high_0  emergence_high_1  \\\n",
+       "0         6.992        6.928             8.292             8.281   \n",
+       "1         5.948        5.954             7.470             7.213   \n",
+       "2         7.733        7.595             9.116             9.116   \n",
+       "3         7.004        6.225             7.973             8.113   \n",
+       "4         4.304        5.411             5.141             5.194   \n",
+       "5         5.708        4.947             6.332             6.459   \n",
+       "6         6.189        6.334             8.283             7.432   \n",
+       "7         7.434        7.570             9.141             9.108   \n",
+       "8         6.034        5.150             9.179             6.997   \n",
+       "9         5.517        5.617             6.900             6.911   \n",
+       "10        5.501        5.337             6.737             6.692   \n",
        "\n",
-       "   emergence_high_3  emergence_high_6  emergence_high_12  geom_mean_risk_0  \\\n",
-       "0             8.367             8.296              7.307             0.001   \n",
-       "1             7.223             7.229              7.340             0.002   \n",
-       "2             8.380             7.526              8.193             0.001   \n",
-       "3             5.420             6.634              6.218             0.028   \n",
-       "4             6.959             6.125              6.267             0.008   \n",
-       "5             7.487             7.646              6.929             0.001   \n",
-       "6             8.852             9.001              8.900             0.000   \n",
-       "7             6.750             6.859              7.065             0.004   \n",
-       "8             6.732             6.553              6.321             0.005   \n",
+       "    emergence_high_3  emergence_high_6  geom_mean_risk_0  geom_mean_risk_1  \\\n",
+       "0              8.367             8.296             0.001             0.001   \n",
+       "1              7.223             7.229             0.002             0.003   \n",
+       "2              9.179             9.028             0.000             0.000   \n",
+       "3              8.380             7.526             0.001             0.001   \n",
+       "4              5.420             6.634             0.028             0.026   \n",
+       "5              6.959             6.125             0.008             0.007   \n",
+       "6              7.487             7.646             0.001             0.002   \n",
+       "7              8.852             9.001             0.000             0.000   \n",
+       "8              7.317             6.347             0.000             0.004   \n",
+       "9              6.750             6.859             0.004             0.004   \n",
+       "10             6.732             6.553             0.005             0.006   \n",
        "\n",
-       "   geom_mean_risk_1  geom_mean_risk_3  geom_mean_risk_6  geom_mean_risk_12  \n",
-       "0             0.001             0.001             0.001              0.003  \n",
-       "1             0.003             0.003             0.003              0.003  \n",
-       "2             0.001             0.001             0.002              0.001  \n",
-       "3             0.026             0.021             0.006              0.009  \n",
-       "4             0.007             0.004             0.010              0.009  \n",
-       "5             0.002             0.002             0.002              0.004  \n",
-       "6             0.000             0.000             0.000              0.000  \n",
-       "7             0.004             0.005             0.005              0.004  \n",
-       "8             0.006             0.005             0.006              0.008  "
+       "    geom_mean_risk_3  geom_mean_risk_6  \n",
+       "0              0.001             0.001  \n",
+       "1              0.003             0.003  \n",
+       "2              0.000             0.000  \n",
+       "3              0.001             0.002  \n",
+       "4              0.021             0.006  \n",
+       "5              0.004             0.010  \n",
+       "6              0.002             0.002  \n",
+       "7              0.000             0.000  \n",
+       "8              0.003             0.008  \n",
+       "9              0.005             0.005  \n",
+       "10             0.005             0.006  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compile variant results\n",
-    "variant = pd.read_csv(RESULT_DIR+'/variant.csv')\n",
-    "ha_risks = {'0':[], '1':[], '3':[], '6':[], '12':[]}\n",
-    "na_risks = {'0':[], '1':[], '3':[], '6':[], '12':[]}\n",
+    "variant = pd.read_csv('data/variant.csv')\n",
+    "ha_risks = {'0':[], '1':[], '3':[], '6':[]}\n",
+    "na_risks = {'0':[], '1':[], '3':[], '6':[]}\n",
     "for i in range(len(variant)):\n",
     "    row = variant.iloc[i]\n",
     "    virus_name = row['name'].replace('/',':')\n",
@@ -479,19 +473,11 @@
     "import tikzplotlib\n",
     "tikzplotlib.save(\"../../tex/overleaf3/Figures/variant.tex\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ce39d35-51ee-4e88-89f2-6e1befc84094",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -505,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
