--- a/paper_data_v3/irat_enet/data_collection.ipynb
+++ b/paper_data_v3/irat_enet/data_collection.ipynb
@@ -1382,9 +1382,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "77a29c25",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1595,7 +1593,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1609,7 +1607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
