--- a/examples/emergenet_examples.ipynb
+++ b/examples/emergenet_examples.ipynb
@@ -5,14 +5,14 @@
    "id": "a98e88c4",
    "metadata": {},
    "source": [
-    "# Evaluating Sequence Risk with `emergenet.emergenet`\n",
+    "# Estimating Emergence Risk with `emergenet.emergenet`\n",
     "\n",
     "## Installation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "3c13f801",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,9 @@
     "!pip install emergenet --upgrade\n",
     "\n",
     "import pandas as pd\n",
-    "from emergenet.emergenet import Enet, predict_irat_emergence"
+    "from emergenet.emergenet import Enet, predict_irat_emergence\n",
+    "\n",
+    "DATA_DIR = 'data/emergenet/'"
    ]
   },
   {
@@ -31,12 +33,12 @@
    "source": [
     "## Evaluation of Risk at a Particular Time\n",
     "\n",
-    "We demonstrate the usage of `emergenet.emergenet` on an IRAT-analyzed sequence, A/mink/Spain/3691-8_22VIR10586-10/2022. IRAT analyzed the risk in April 2023, so we will do the same."
+    "We demonstrate the usage of `emergenet.emergenet` on an IRAT-analyzed sequence, **A/Indiana/08/2011**. IRAT analyzed the risk in December 2012, so we will do the same."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "1ef828bd",
    "metadata": {},
    "outputs": [
@@ -44,28 +46,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Influenza Virus                              A/mink/Spain/3691-8_22VIR10586-10/2022\n",
-      "Virus Type                                                                     H5N1\n",
-      "Date of Risk Assessment                                                  2023-04-01\n",
+      "Influenza Virus                                                   A/Indiana/08/2011\n",
+      "Virus Type                                                                     H3N2\n",
+      "Date of Risk Assessment                                                  2012-12-01\n",
       "Risk Score Category                                                        Moderate\n",
-      "Emergence Score                                                                 5.1\n",
-      "Impact Score                                                                    6.2\n",
-      "Mean Low Acceptable Emergence                                                  3.96\n",
-      "Mean High Acceptable Emergence                                                 6.27\n",
-      "Mean Low Acceptable Impact                                                     4.95\n",
-      "Mean High Acceptable Impact                                                    7.43\n",
-      "HA Sequence                       MENIVLLLAIVSLVKSDQICIGYHANNSTEQVDTIMEKNVTVTHAQ...\n",
-      "NA Sequence                       MNPNQRIITTGSICMVIGIVSLMLQIGNIISIWVSHSIQTGNQYQP...\n",
-      "HA Length                                                                       567\n",
+      "Emergence Score                                                                 6.0\n",
+      "Impact Score                                                                    4.5\n",
+      "Mean Low Acceptable Emergence                                                  -1.0\n",
+      "Mean High Acceptable Emergence                                                 -1.0\n",
+      "Mean Low Acceptable Impact                                                     -1.0\n",
+      "Mean High Acceptable Impact                                                    -1.0\n",
+      "HA Sequence                       MKTIIAFSCILCLIFAQKLPGSDNSMATLCLGHHAVPNGTLVKTIT...\n",
+      "NA Sequence                       MNPNQKIITIGSVSLIIATICFLMQIAILVTTVTLHFKQHDYNSPP...\n",
+      "HA Length                                                                       566\n",
       "NA Length                                                                       469\n",
-      "Name: 0, dtype: object\n"
+      "Name: 20, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "# Load IRAT sequence - A/mink/Spain/3691-8_22VIR10586-10/2022\n",
-    "irat_df = pd.read_csv('data/emergenet/irat.csv')\n",
-    "row = irat_df.iloc[0]\n",
+    "# Load IRAT sequence - A/Indiana/08/2011\n",
+    "irat_df = pd.read_csv(DATA_DIR+'irat.csv')\n",
+    "row = irat_df.iloc[20]\n",
     "print(row)"
    ]
   },
@@ -74,7 +76,7 @@
    "id": "fffeac42",
    "metadata": {},
    "source": [
-    "The `Enet` model requires the analysis date in format YYYY-MM-DD, the HA sequence, and the NA sequence. It will train multiple Emergenet models, so it will take several minutes.\n",
+    "The `Enet` model requires the analysis date in format YYYY-MM-DD, the HA sequence, and the NA sequence. It will train multiple Emergenet models, so it will take some time.\n",
     "\n",
     "**As of 2024-04-01, Emergenet only supports sequences from 2010-01-01 to 2024-01-01.**\n",
     "\n",
@@ -83,26 +85,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bfa863f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/kevinywu/.local/lib/python3.8/site-packages/emergenet/data/human.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/emergenet/emergenet.py\u001b[0m in \u001b[0;36mrisk\u001b[0;34m(self, yearsbefore, enet_sample_size, risk_sample_size)\u001b[0m\n\u001b[1;32m    313\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    314\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 315\u001b[0;31m             \u001b[0mhuman\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_load_sequences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myearsbefore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    316\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0msegment\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'HA'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'NA'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    317\u001b[0m                 \u001b[0mrisks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/emergenet/emergenet.py\u001b[0m in \u001b[0;36m_load_sequences\u001b[0;34m(self, yearsbefore)\u001b[0m\n\u001b[1;32m     93\u001b[0m         '''\n\u001b[1;32m     94\u001b[0m         \u001b[0mfilepath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresource_filename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'emergenet'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data/human.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m         \u001b[0mhuman\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mna_filter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manalysis_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0myearsbefore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mday\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/software/python-anaconda-2021.05-el7-x86_64/lib/python3.8/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/software/python-anaconda-2021.05-el7-x86_64/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    678\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    679\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 680\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    681\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    682\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/software/python-anaconda-2021.05-el7-x86_64/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    573\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    574\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 575\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    576\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    577\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/software/python-anaconda-2021.05-el7-x86_64/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m    932\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    933\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIOHandles\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 934\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    935\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    936\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/software/python-anaconda-2021.05-el7-x86_64/lib/python3.8/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1216\u001b[0m             \u001b[0;31m# \"Union[str, PathLike[str], ReadCsvBuffer[bytes], ReadCsvBuffer[str]]\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;31m# , \"str\", \"bool\", \"Any\", \"Any\", \"Any\", \"Any\", \"Any\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1218\u001b[0;31m             self.handles = get_handle(  # type: ignore[call-overload]\n\u001b[0m\u001b[1;32m   1219\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1220\u001b[0m                 \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/software/python-anaconda-2021.05-el7-x86_64/lib/python3.8/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    784\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    785\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 786\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    787\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    788\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/kevinywu/.local/lib/python3.8/site-packages/emergenet/data/human.csv'"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "\n",
+    "# We need the analysis date, and HA and NA sequences\n",
+    "# Optionally, we can proved a save_data directory\n",
     "analysis_date = row['Date of Risk Assessment']\n",
     "ha_seq = row['HA Sequence']\n",
     "na_seq = row['NA Sequence']\n",
     "SAVE_DIR = 'data/emergenet/example_results/'\n",
     "\n",
     "# Initialize the Enet\n",
-    "enet = Enet(analysis_date, ha_seq, na_seq, random_state=42)\n",
+    "enet = Enet(analysis_date=analysis_date, \n",
+    "            ha_seq=ha_seq, \n",
+    "            na_seq=na_seq, \n",
+    "            save_data=SAVE_DIR, \n",
+    "            random_state=42)\n",
     "\n",
     "# Estimate the Enet risk scores\n",
-    "ha_risk, na_risk = enet.risk(sample_size=10000)\n",
+    "ha_risk, na_risk = enet.risk()\n",
     "\n",
     "# Map the Enet risk scores to the IRAT risk scale\n",
-    "irat, irat_low, irat_high = predict_irat_emergence(ha_risk, na_risk)"
+    "irat, irat_low, irat_high = predict_irat_emergence(ha_risk=ha_risk, \n",
+    "                                                   na_risk=na_risk)"
    ]
   },
   {
@@ -114,7 +142,7 @@
     "\n",
     "**As of 2024-04-01, \"present_time\" = 2024-01-01.**\n",
     "\n",
-    "What if we want to evaluate the risk of A/mink/Spain/3691-8_22VIR10586-10/2022 at present time? Instead of providing an analysis date, set it to `'PRESENT'`. This uses pre-trained Enet models trained as of **\"present_time\"**, so will only take a couple minutes."
+    "What if we want to evaluate the risk of **A/Indiana/08/2011** at present time? Instead of providing an analysis date, set it to `'PRESENT'`. This uses pre-trained Enet models trained as of **\"present_time\"**, so will only take a couple minutes."
    ]
   },
   {
@@ -125,15 +153,18 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
     "# Initialize the Enet\n",
-    "enet_present = Enet('PRESENT', ha_seq, na_seq, random_state=42)\n",
+    "enet_present = Enet(analysis_date='PRESENT', \n",
+    "                    ha_seq=ha_seq, \n",
+    "                    na_seq=na_seq, \n",
+    "                    random_state=42)\n",
     "\n",
-    "# Estimate the Enet risk scores at present\n",
-    "ha_risk_present, na_risk_present = enet_present.risk(sample_size=10000)\n",
+    "# Estimate the Enet risk scores at present time (2024-01-01)\n",
+    "ha_risk_present, na_risk_present = enet_present.risk()\n",
     "\n",
     "# Map the Enet risk scores to the IRAT risk scale\n",
-    "irat_present, irat_low_present, irat_high_present = predict_irat_emergence(ha_risk_present, enet_present)"
+    "irat_present, irat_low_present, irat_high_present = predict_irat_emergence(ha_risk=ha_risk_present, \n",
+    "                                                                           na_risk=ha_risk_present)"
    ]
   }
  ],
